public/css/index.css
@font-face {
	font-family: 'KOFTH2';
	src: url('../dialupfonts/KingOfTheHill2.eot'); /* IE9 Compat Modes */
	src: url('../dialupfonts/KingOfTheHill2.eot?#iefix') format('embedded-opentype'),
	url('../dialupfonts/KingOfTheHill2.woff2') format('woff2'),
	url('../dialupfonts/KingOfTheHill2.woff') format('woff'),
	url('../dialupfonts/KingOfTheHill2.ttf')  format('truetype'),
	url('../dialupfonts/KingOfTheHill2.svg#svgFontName') format('svg'); /* Legacy iOS */
}
@font-face {
	font-family: 'ArialRoundedMTBold';
	src: url('../dialupfonts/ArialRoundedMTBold.eot'); /* IE9 Compat Modes */
	src: url('../dialupfonts/ArialRoundedMTBold.eot?#iefix') format('embedded-opentype'),
	url('../dialupfonts/ArialRoundedMTBold.woff2') format('woff2'),
	url('../dialupfonts/ArialRoundedMTBold.woff') format('woff'),
	url('../dialupfonts/ArialRoundedMTBold.ttf')  format('truetype'),
	url('../dialupfonts/ArialRoundedMTBold.svg#svgFontName') format('svg'); /* Legacy iOS */
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    font-family: 'KOFTH2';
}

li {
  display: inline;
  padding: 25px;
}

.navbar {
  margin: auto;
    width: 60%;
    padding: 10px;
}


div.a img{

  z-index: 998;
}

#d { position: absolute;
     /*left: 100px;
     top: 100px;
     width: 100px;
     height: 100px;
     background-color: #fce;   */
}


html, body {
	height: 100%;
	margin: 0;
	background: #000000;
}

#safari-img
{
	position: absolute;
	width: 80%;
	top: 10%;
	left: 10%;
	border-radius: 3px;
	box-shadow: 0 3px 6px rgba(0,0,0,0.9);
}

#safari-img:empty
{
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	-moz-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	-o-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

#safari-header {
	font-family: 'ArialRoundedMTBold';
	color: white;
	font-size: 60px;
	padding-top: 2%;
	width: 80%;
	margin-left:auto;
	margin-right:auto;
	text-align: center;
}

#wrapper {
	/*width: 100%;
	margin: auto*/
	min-height: 100%;
	background: rgba(255, 255, 255, 0.1);
}

.jumbotron {
	display: inline-block;
	margin-left: 5%;
	z-index: 999;
}


.jumbotron h1 {
	font-family: 'KOFTH2';
	color: white;
	font-size: 100px;
	margin-top: 0px;
}

#menu {
	text-decoration: none;
}
.nav {
	height: 40px;
	/*background-color: #F6B50F;*/
	font-family: 'KOFTH2';
	font-weight: 700;
	font-size: 18px;
}

.nav ul {
	width:100%;
	height: 100%;
	margin:0 auto;
	padding:0;
	list-style:none;
	/*background-color: #F6B50F;*/
	text-align:center;
	display: flex;
}
.nav li {
	width:25%;
	height: 100%;
	margin:0;
	padding:0;
}

.nav a {
	text-align:center;
	display: block;
	vertical-align: middle;
	text-decoration: none;
	/*padding:12px 0 13px 0;*/
	margin:auto, 0;
	/*border-left: 1px solid #fff;
	border-right: 1px solid #fff;*/
}
.nav a:hover {
	text-decoration: none;
	color: white;
}

.nav li:hover {
	/*background:#D84F25;*/
	border:none;
}

#nav-center {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	transform: translateY(-50%);
}

#preview-coverflow {
	padding-top: 15%;
}

#preview-coverflow .cover {
	cursor:		pointer;
	box-shadow:	0 0 6em 0em white;
	margin: 0;
}

.options {
	position: relative;
	margin: 0 auto;
	padding-top: 50%;
	width: 70%;
	text-align: center;
	font-family: 'ArialRoundedMTBold';
	color: white;
} 



#fall {
	font-size: 4vw;
	text-decoration: none;
}

@media only screen and (min-device-width : 800px){
    .options {
		transform: translateY(-50%);
	}
}

#fall:hover {
	text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
}

a:visited {
    color: white;
}

#summer {
	text-decoration: underline;
}

#summer:hover {
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

#logo {
	position: absolute;
	bottom: 20px;
	font-size: 20px;
	font-family: 'ArialRoundedMTBold';
	color: white;
	width: 100%;
	text-align: center;
}

a {
	color: white;
}

@media only screen and (max-device-width : 800px){
    #fall {
		font-size: 30px;
	}
	#summer {
		font-size: 15px;
	}
	p {
		font-size: 15px;
	}
}

.colorChange {
	-webkit-animation-direction: normal;
	-webkit-animation-duration: 10s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-name: colours;
	-webkit-animation-timing-function: ease;

	-moz-animation-direction: normal;
	-moz-animation-duration: 10s;
	-moz-animation-iteration-count: infinite;
	-moz-animation-name: colours;
	-moz-animation-timing-function: ease;

	-o-animation-direction: normal;
	-o-animation-duration: 10s;
	-o-animation-iteration-count: infinite;
	-o-animation-name: colours;
	-o-animation-timing-function: ease;

	animation-direction: normal;
	animation-duration: 10s;
	animation-iteration-count: infinite;
	animation-name: colours;
	animation-timing-function: ease;
}

@-webkit-keyframes colours {
	  0% {color: #CDFFA7;} /*Baby Green*/
	 20% {color: #8bc5d1;} /*Light Blue*/
	 40% {color: #FFA998;} /*Light Pink*/
	 60% {color: #FFF0AD;} /*Light Yellow*/
	 80% {color: #E6FF47;} /*Gold-ish*/
	100% {color: #CDFFA7;} /*Baby Green*/
}

@-moz-keyframes colours {
	  0% {color: #CDFFA7;} /*Baby Green*/
	 20% {color: #8bc5d1;} /*Light Blue*/
	 40% {color: #FFA998;} /*Light Pink*/
	 60% {color: #FFF0AD;} /*Light Yellow*/
	 80% {color: #E6FF47;} /*Gold-ish*/
	100% {color: #CDFFA7;} /*Baby Green*/
}

@-o-keyframes colours {
	  0% {color: #CDFFA7;} /*Baby Green*/
	 20% {color: #8bc5d1;} /*Light Blue*/
	 40% {color: #FFA998;} /*Light Pink*/
	 60% {color: #FFF0AD;} /*Light Yellow*/
	 80% {color: #E6FF47;} /*Gold-ish*/
	100% {color: #CDFFA7;} /*Baby Green*/
}

@keyframes colours {
	  0% {color: #CDFFA7;} /*Baby Green*/
	 20% {color: #8bc5d1;} /*Light Blue*/
	 40% {color: #FFA998;} /*Light Pink*/
	 60% {color: #FFF0AD;} /*Light Yellow*/
	 80% {color: #E6FF47;} /*Gold-ish*/
	100% {color: #CDFFA7;} /*Baby Green*/
}

